add links, remove tailwind

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
+    <!--link
       href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
       rel="stylesheet"
-    />
+    /-->
   </head>
   <body>
     <a href="https://saaennuste.fi">Weather forecast</a>
+    <a href="https://pysäkit.fi">Public transportation</a>
 
     <h2>Bookmark by dragging the link on browser toolbar</h2>
     <div>
