--- a/index.html
+++ b/index.html
@@ -9,17 +9,25 @@
     /-->
   </head>
   <body>
-    <a href="https://saaennuste.fi">Weather forecast</a>
-    <a href="https://pysäkit.fi">Public transportation</a>
-
-    <h2>Bookmark by dragging the link on browser toolbar</h2>
-    <div>
+    <h2>Applications</h2>
+    <p>
+       <a href="https://saaennuste.fi">Weather forecast</a>
+    </p>
+    <p>
+      <a href="https://pysäkit.fi">Public transportation</a>
+    </p>
+    
+    <h2>Video speed bookmarklet</h2>
+    <p>
       Video speed bookmarklet increases the playback speed when clicked and
-      reverts the normal speed when clicked again.
+      reverts the normal speed when clicked again. 
+    </p>
+    <p>
+      Bookmark by dragging the link into the browser toolbar
       <a
         href="javascript:(function()%7B(() %3D> %7Bconst videos %3D document.querySelectorAll('video')%3Bfor( video of videos) %7Bconst speed %3D video.playbackRate %3D%3D%3D 1 %3F 12 %3A 1%3Bvideo.playbackRate %3D speed%3B%7D%7D)()%7D)()"
         >video speed</a
       >
-    </div>
+    </p>
   </body>
 </html>
