--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@
           onclick="this.setSelectionRange(0, this.value.length)"
           id="myInput"
         />javascript:(function()%7B(() %3D> %7Bconst videos %3D document.querySelectorAll('video')%3Bfor( video of videos) %7Bconst speed %3D video.playbackRate %3D%3D%3D 1 %3F 12 %3A 1%3Bvideo.playbackRate %3D speed%3B%7D%7D)()%7D)()
-      </textarea>
-
-        copy bookmarklet code and paste it into existing bookmark
+      </textarea><br>
+        copy code above and paste it into existing bookmark. (In case of clipboard dropping "javascript", it has to be written manually)
 
         <script>
           function myFunction() {
